Tạm lưu thay đổi local trước khi merge

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -7,3 +7,8 @@ VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_RETURN_URL=http://localhost:3000/payment-result
 # Optional mock URL if not configured
 MOCK_PAYMENT_URL=https://sandbox.vnpayment.vn/tryitnow/
+
+# Admin seeding (change these in production!)
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=admin!
+ADMIN_NAME=EduLearn Admin
