--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seed/adminSeeder.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
